# Halbach-Analysis

./: Halbach_Analysis.py  README.md  pyproject.toml
halbach_analysis/: Halbach_Analysis.py  akshatplotting.mlx  forces_a.m  halbach_lift_against_width.asv  halbach_lift_against_width.m  optimum_lift_density.py  passive_a.m  plotting_functions.py
legacy/: forces_a.m.txt
